Move container options in grid.css, fix scrollbar

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,7 @@
+@import './colors.scss';
+
+@import './grid.scss';
+
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -9,43 +13,11 @@
   url('./assets/fonts/open-sans-v15-cyrillic_cyrillic-ext_latin-regular.woff') format('woff');
 }
 
-@media screen and (max-width : 360px) and (min-width : 100px) {
-  .container {
-    min-width: 360px;
-  }
+body::-webkit-scrollbar {
+  width: 0px;
 }
 
-@media screen and (max-width : 500px) and (min-width : 100px) {
-  .container {
-    max-width: 90%;
-  }
-}
-
-@media screen and (max-width : 1200px) and (min-width : 500px) {
-  .container {
-    font-size: 0.9rem;
-  }
-}
-
-@media screen and (min-width : 1200px) {
-  .container { 
-    min-width: 1200px;
-  } 
-}
-
-@media screen and (min-width : 1300px) {
-  .container { 
-    min-width: 1300px; 
-  } 
-}
-
-@media screen and (min-width : 1400px) {
-  .container { 
-    min-width: 1400px; 
-  } 
-}
-
-::-webkit-scrollbar {
+.modal::-webkit-scrollbar {
   width: 0px;
 }
 
